# straw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: CMakeLists.txt  Main.cpp  SimpleAutomation.cpp  SimpleAutomation.h
Demo/Scripts/: clickComponent.py  findComponent.py  help.py  log.py  raise.py  test.py
Modules/: CMakeLists.txt
Modules/juce_python/: juce_python.cpp  juce_python.h  juce_python_core.cpp  juce_python_events.cpp  juce_python_graphics.cpp  juce_python_gui_basics.cpp
Modules/juce_python/bindings/: ScriptJuceBindings.cpp  ScriptJuceCoreBindings.cpp  ScriptJuceCoreBindings.h  ScriptJuceEventsBindings.cpp  ScriptJuceEventsBindings.h  ScriptJuceGraphicsBindings.cpp  ScriptJuceGraphicsBindings.h  ScriptJuceGuiBasicsBindings.cpp  ScriptJuceGuiBasicsBindings.h
Modules/juce_python/scripting/: ScriptBindings.cpp  ScriptBindings.h  ScriptEngine.cpp  ScriptEngine.h  ScriptException.h  ScriptUtilities.h
Modules/juce_python/utilities/: ClassDemangling.cpp  ClassDemangling.h  PythonInterop.h
Modules/juce_straw/: juce_straw.cpp  juce_straw.h
Modules/juce_straw/endpoints/: straw_ComponentEndpoints.cpp  straw_ComponentEndpoints.h
Modules/juce_straw/helpers/: straw_ComponentHelpers.cpp  straw_ComponentHelpers.h
Modules/juce_straw/scripting/: straw_ScriptBindings.cpp  straw_ScriptBindings.h  straw_ScriptEngine.cpp  straw_ScriptEngine.h  straw_ScriptException.h  straw_ScriptJuceBindings.cpp  straw_ScriptJuceBindings.h  straw_ScriptUtilities.h
Modules/juce_straw/scripting/juce_bindings/: straw_ScriptJuceCoreBindings.cpp  straw_ScriptJuceCoreBindings.h  straw_ScriptJuceEventsBindings.cpp  straw_ScriptJuceEventsBindings.h  straw_ScriptJuceGraphicsBindings.cpp  straw_ScriptJuceGraphicsBindings.h  straw_ScriptJuceGuiBasicsBindings.cpp  straw_ScriptJuceGuiBasicsBindings.h
Modules/juce_straw/server/: straw_AutomationServer.cpp  straw_AutomationServer.h  straw_Request.h
Modules/juce_straw/values/: straw_VariantConverter.h
Wheel/: CMakeLists.txt  setup.py
Wheel/tests/: test_application.py
